# halftonery

./: .gitignore  Cargo.toml  README.md
halftonery/src/: main.rs
halftonery/src/color/: mod.rs
obshalftonery/: Cargo.toml  README.md
obshalftonery/resources/: rust-obs-plugins.patch
obshalftonery/src/: lib.rs
src/: lib.rs  main.rs
