[package]
name = "obshalftonery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halftonery = {path = "../halftonery"}
obs-wrapper = {path = "../../rust-obs-plugins"}
imageproc = "*"

[lib]
name = "obshalftonery"
crate-type = ["cdylib"]